fix div.extra z-index and appearance

--- a/sv/sort.css
+++ b/sv/sort.css
@@ -2,6 +2,7 @@
 /* body.modal-open { position: fixed; } */
 
 .modal {
+  z-index: 1001;
   display: none;
   position: fixed;
   top: 0;
